# InjectorLibrary

./: conanfile.py
src/: CMakeLists.txt
src/InjectorLibrary/: CMakeLists.txt
src/InjectorLibrary/elf_headers/: ElfBinary.h  ElfCodeCaveAlg.h  ElfHeader.h  ElfHeaderManager.h  ElfProgramHeader.h  ElfSectionHeader.h
src/InjectorLibrary/interface/: IBinaryFile.h  ICodeCaveAlg.h
src/InjectorLibrary/public_header/: Injector.h
src/InjectorLibrary/source/: ElfBinary.cpp  ElfCodeCaveAlg.cpp  ElfHeader.cpp  ElfHeaderManager.cpp  ElfProgramHeader.cpp  ElfSectionHeader.cpp  Injector.cpp
src/res/: hello  infect
src/source/: main.cpp
